--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ipék joaillaire - Bientôt disponible</title>
+  <title>ipék joaillerie - Bientôt disponible</title>
   <style>
     body {
       margin: 0;
@@ -45,11 +45,12 @@
 </head>
 <body>
   <!-- Logonuzu buraya ekleyebilirsiniz -->
-  <img src="logo.png" alt="ipék joaillaire" class="logo">
+  <img src="logo.png" alt="ipék joaillerie" class="logo">
 
   <h1>ipék joaillaire</h1>
   <p><span class="accent">Bientôt disponible...</span></p>
 
-  <div class="footer">© 2025 ipék joaillaire</div>
+  <div class="footer">© 2025 ipék joaillerie</div>
 </body>
 </html>
+
