--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
   <!-- Logonuzu buraya ekleyebilirsiniz -->
   <img src="logo.png" alt="ipék joaillerie" class="logo">
 
-  <h1>ipék joaillaire</h1>
+  <h1>ipék joaillerie</h1>
   <p><span class="accent">Bientôt disponible...</span></p>
 
   <div class="footer">© 2025 ipék joaillerie</div>
 </body>
 </html>
+
 
