--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     }
 
     .logo {
-      width: 160px;
+      width: 200px;
       height: auto;
       margin-bottom: 2rem;
       animation: fadeIn 1.8s ease;
-      filter: brightness(0) contrast(1.2); /* keeps black logo crisp */
+      display: inline-block;
     }
 
     .hero h1 {
@@ -116,7 +116,19 @@
 <body>
   <div class="page">
     <header>
-      <img src="logo.png" alt="Maison Sertaç Ipek Joaillerie Logo" class="logo">
+      <!-- Embedded SVG logo -->
+      <svg class="logo" width="200" height="200" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+          <linearGradient id="goldGradient" x1="0" y1="0" x2="1" y2="1">
+            <stop offset="0%" stop-color="#d8c278" />
+            <stop offset="100%" stop-color="#bfa14a" />
+          </linearGradient>
+        </defs>
+        <circle cx="100" cy="100" r="85" fill="none" stroke="url(#goldGradient)" stroke-width="2.5" />
+        <text x="50%" y="54%" text-anchor="middle" font-family="'Playfair Display', serif" font-size="36" font-weight="600" fill="url(#goldGradient)">
+          S. IPEK
+        </text>
+      </svg>
     </header>
     <main class="hero">
       <h1>Maison Sertaç Ipek Joaillerie</h1>
