Change contact email in CTA link
Updated contact email in the call-to-action link.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <main class="hero">
       <h1>Maison Sertaç Ipek Joaillerie</h1>
       <p>De l’héritage du Grand Bazar à la lumière de Nice.</p>
-      <a href="mailto:info@ipekjoaillerie.com" class="cta">Soyez informé du lancement</a>
+      <a href="mailto:contact@ipekjoaillerie.com" class="cta">Soyez informé du lancement</a>
     </main>
     <footer>
       © 2025 Maison Sertaç Ipek Joaillerie — Héritage de Lumière
@@ -141,3 +141,4 @@
   </div>
 </body>
 </html>
+
