--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-@DOCTYPE html
+<!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
@@ -116,7 +116,7 @@
 <body>
   <div class="page">
     <header>
-      @-- Embedded SVG logo --
+      <!-- Embedded SVG logo -->
       <svg class="logo" width="200" height="200" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
         <defs>
           <linearGradient id="goldGradient" x1="0" y1="0" x2="1" y2="1">
@@ -133,7 +133,7 @@
     <main class="hero">
       <h1>Maison Sertaç Ipek Joaillerie</h1>
       <p>De l’héritage du Grand Bazar à la lumière de Nice.</p>
-      <a href="mailto:contact@ipekjoaillerie.com" class="cta">Soyez informé du lancement</a>
+      <a href="mailto:info@ipekjoaillerie.com" class="cta">Soyez informé du lancement</a>
     </main>
     <footer>
       © 2025 Maison Sertaç Ipek Joaillerie — Héritage de Lumière
