Enhance index.html with meta and favicon
Added a meta description and favicon to the HTML document. Updated the footer year.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Maison Sertaç Ipek Joaillerie. De l’héritage du Grand Bazar à la lumière de Nice. Créations de haute joaillerie.">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💎</text></svg>">
   <title>Maison Sertaç Ipek Joaillerie</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -136,9 +138,10 @@
       <a href="mailto:contact@ipekjoaillerie.com" class="cta">Soyez informé du lancement</a>
     </main>
     <footer>
-      © 2025 Maison Sertaç Ipek Joaillerie — Héritage de Lumière
+      © 2026 Maison Sertaç Ipek Joaillerie — Héritage de Lumière
     </footer>
   </div>
 </body>
 </html>
+
 
