Refactor HTML structure and update logo

--- a/index.html
+++ b/index.html
@@ -118,19 +118,7 @@
 <body>
   <div class="page">
     <header>
-      <!-- Embedded SVG logo -->
-      <svg class="logo" width="200" height="200" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <defs>
-          <linearGradient id="goldGradient" x1="0" y1="0" x2="1" y2="1">
-            <stop offset="0%" stop-color="#d8c278" />
-            <stop offset="100%" stop-color="#bfa14a" />
-          </linearGradient>
-        </defs>
-        <circle cx="100" cy="100" r="85" fill="none" stroke="url(#goldGradient)" stroke-width="2.5" />
-        <text x="50%" y="54%" text-anchor="middle" font-family="'Playfair Display', serif" font-size="36" font-weight="600" fill="url(#goldGradient)">
-          S. IPEK
-        </text>
-      </svg>
+      <img src="serta.png" alt="Maison Sertaç Ipek Logo" class="logo">
     </header>
     <main class="hero">
       <h1>Maison Sertaç Ipek Joaillerie</h1>
@@ -143,5 +131,6 @@
   </div>
 </body>
 </html>
+
 
 
